<resources>
    <string name="app_name">FirebaseDatabaseTest</string>
    <string name="SignUp">SignUp</string>
    <string name="SignIn">SignIn</string>
    <string name="GetUser">Get Notes</string>
    <string name="addNote">Add Note</string>
    <string name="title">Tittle</string>
    <string name="description">Description</string>
    <string name="user">User</string>
    <string name="UserProfile">User Profile</string>
    <string name="upload">Upload</string>
    <string name="select">Select File</string>
    <string name="update">Update</string>
</resources>
