<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/SignUp"
            android:id="@+id/signup"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="20dp"
            android:layout_below="@+id/signup"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/SignIn"
            android:id="@+id/signIn"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="20dp"
            android:layout_below="@+id/signIn"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/GetUser"
            android:id="@+id/getUser"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="20dp"
            android:layout_below="@+id/getUser"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/UserProfile"
            android:id="@+id/profile"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</LinearLayout>